| Bug #39361 | backup_views failed: Lost connection to MySQL server during query | ||
|---|---|---|---|
| Submitted: | 10 Sep 2008 7:46 | Modified: | 19 Feb 2009 19:37 |
| Reporter: | Zhenxing He | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Tests | Severity: | S3 (Non-critical) |
| Version: | 6.0 | OS: | Any |
| Assigned to: | Zhenxing He | CPU Architecture: | Any |
[10 Sep 2008 7:46]
Zhenxing He
[10 Sep 2008 8:08]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/53666 2693 He Zhenxing 2008-09-10 BUG#39361 backup_views failed: Lost connection to MySQL server during query thd->mysys_var was not reset to NULL before calling thd->store_globals() and cause a assertion to fail, which is fixed by this patch.
[17 Oct 2008 2:36]
Zhenxing He
Pushed to 6.0-rpl
[30 Jan 2009 13:31]
Bugs System
Pushed into 6.0.10-alpha (revid:luis.soares@sun.com-20090129165607-wiskabxm948yx463) (version source revid:luis.soares@sun.com-20090129163120-e2ntks4wgpqde6zt) (merge vers: 6.0.10-alpha) (pib:6)
[19 Feb 2009 19:37]
Paul DuBois
Noted in 6.0.10 changelog. A bad pointer dereference caused BACKUP DATABASE to crash.
