BUG#39361 backup_views failed: Lost connection to MySQL server during query

thd->mysys_var was not reset to NULL before calling thd->store_globals() and 
cause a assertion to fail, which is fixed by this patch.